odds-work-shop/odds-shopgw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odds-shopgw
  namespace: odds-shop
spec:
  selector:
    app: odds-shopgw
  ports:
  - name: odds-shopgw-http
    port: 8099
    targetPort: 80
    protocol: TCP
