odds-work-shop/odds-shopweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odds-shopweb
  namespace: odds-shop
spec:
  selector:
    app: odds-shopweb
  ports:
  - name: odds-shopapi-http
    port: 8080
    targetPort: 8080
    protocol: TCP
